--- a/motd.html
+++ b/motd.html
@@ -14,6 +14,10 @@
 
 <body>
 
+  <p>
+    Thingy here
+  </p>
+
   <script>
     var texts = [
       "I am a sentence.",
@@ -23,8 +27,6 @@
 
     document.getElementById('randomText').value = texts[Math.floor(Math.random() * texts.length)];
   </script>
-
-
 
 </body>
 
