--- a/motd.html
+++ b/motd.html
@@ -14,9 +14,7 @@
 
 <body>
 
-  <p>
-    Thingy here
-  </p>
+
 
   <script>
     var texts = [
@@ -27,6 +25,8 @@
 
     document.getElementById('randomText').value = texts[Math.floor(Math.random() * texts.length)];
   </script>
+
+  <input type="text" id="randomText">
 
 </body>
 
