--- a/motd.html
+++ b/motd.html
@@ -26,7 +26,7 @@
     document.getElementById('randomText').value = texts[Math.floor(Math.random() * texts.length)];
   </script>
 
-  <input type="text" id="randomText">
+  <a type="text" id="randomText"></a>
 
 </body>
 
