--- a/motd.html
+++ b/motd.html
@@ -13,21 +13,42 @@
 </head>
 
 <body>
+  <SCRIPT LANGUAGE="JAVASCRIPT">
+  <!--
 
+  var r_text = new Array ();
+  r_text[0] = "At the end of the day, the day will end.";
+  r_text[1] = "Tough times don't last, tough men do.";
+  r_text[2] = "9th core value!";
+  r_text[3] = "Fuck you understand";
+  r_text[4] = "Eh recruit, how do you spell RECORD?";
+  r_text[5] = "REC is you. ORD is me."
+  r_text[6] = "Better wake up your idea!"
+  r_text[7] = "My problem?"
+  r_text[8] = "NEVERMIND!"
+  r_text[9] = "Safety third"
+  r_text[10] = "You think, I thought, who confirm?"
+  r_text[11] = "Don't make your problem my problem."
+  r_text[12] = "Wgt ORD"
+  r_text[13] = "Confirm plus chop"
+  r_text[14] = "When the going gets tough, the tough gets going."
 
+  var i = Math.floor(r_text.length * Math.random());
 
-  <script>
-    var texts = [
-      "I am a sentence.",
-      "Some nice stuff.",
-      "I am random too!"
-    ];
+  document.write("<br /><br /><br /><br /><br /><br /><br /><center><FONT SIZE=72><FONT COLOR='#EBEBEB'>" +
+  r_text[i]  + "</FONT></center><br />");
 
-    document.getElementById('randomText').value = texts[Math.floor(Math.random() * texts.length)];
-  </script>
+  document.body.style.background="#303437";
 
-  <a type="text" id="randomText"></a>
+  </script><br> <br>
+      <br>
+      <br>
+      <style type="text/css">
+  <!--
+  body,td,th {
+       color: #000;
+       font-family: Arial, sans-serif;
 
-</body>
+  </body>
 
 </html>
