--- a/motd.html
+++ b/motd.html
@@ -35,8 +35,8 @@
 
   var i = Math.floor(r_text.length * Math.random());
 
-  document.write("<br /><br /><br /><br /><br /><br /><br /><center><FONT SIZE=72><FONT COLOR='#EBEBEB'>" +
-  r_text[i]  + "</FONT></center><br />");
+  document.write("<center><FONT SIZE=72><FONT COLOR='#EBEBEB'>" +
+  r_text[i]);
 
   document.body.style.background="#303437";
 
