--- a/motd.html
+++ b/motd.html
@@ -21,7 +21,7 @@
   r_text[1] = "Tough times don't last, tough men do.";
   r_text[2] = "9th core value!";
   r_text[3] = "Fuck you understand";
-  r_text[4] = "Eh recruit, how do you spell RECORD?";
+  r_text[4] = "Ey recruit, how do you spell RECORD?";
   r_text[5] = "REC is you. ORD is me."
   r_text[6] = "Better wake up your idea!"
   r_text[7] = "My problem?"
@@ -40,9 +40,7 @@
 
   document.body.style.background="#303437";
 
-  </script><br> <br>
-      <br>
-      <br>
+  </script>
       <style type="text/css">
   <!--
   body,td,th {
