--- a/today.html
+++ b/today.html
@@ -2,22 +2,11 @@
 <html lang="en">
 
 <head>
-  <style>
-    body {
-      background-color: #2f3437;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
-<style>
-body {background-color: #303437; text-align: center;}
-p {color: #EBEBEB; font-family: arial; width: 100%;}
-#today {}
-#date {font-size: 30px}
-</style>
 
 <body>
   <p id="date">
