--- a/qotd.html
+++ b/qotd.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
-
-  <p id=quote></p>
+  <p2>
+    QOTD:
+  </p2>
+  <br>
+  <p1 id=quote></p1>
   <script LANGUAGE="JAVASCRIPT">
     var r_text = new Array();
     r_text[0] = "At the end of the day, the day will end.";
