--- a/qotd.html
+++ b/qotd.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-  <br>
-  <p1 id=quote></p1>
+  <p id=quote></p>
   <script LANGUAGE="JAVASCRIPT">
     var r_text = new Array();
     r_text[0] = "At the end of the day, the day will end.";
