--- a/qotd.html
+++ b/qotd.html
@@ -14,6 +14,7 @@
     r_text[0] = "At the end of the day, the day will end.";
     r_text[1] = "Tough times don't last, tough men do.";
     r_text[2] = "9th core value!";
+    r_text[3] = "Half full water bottle drink up"
     r_text[4] = "Ey recruit, how do you spell RECORD?";
     r_text[5] = "REC is you. ORD is me."
     r_text[6] = "Better wake up your idea!"
