--- a/qotd.html
+++ b/qotd.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <p id=quote></p>
+  <div class='middle'>
+    <p id=quote></p>
+  </div>
   <script LANGUAGE="JAVASCRIPT">
     var r_text = new Array();
     r_text[0] = "At the end of the day, the day will end.";
