--- a/today.html
+++ b/today.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-  <p id="date">
+  <div class='middle'>
+    <p id="date"></p>
+  </div>
 
-  </p>
 
   <script type="text/javascript">
     const monthNames = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
