--- a/george.html
+++ b/george.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <link rel="stylesheet" href="style.css">
+
   <body>
-  <h1>Hello world!</h1>
-  <h2>Welcome to my widget page</h2>
-  <br>
-  <!-- Greg -->
-  <div>
-    <a href="george.html">Greg</a>
-  </div>
+    <h1>
+      Welcome to Greg's Widgets
+    </h1>
   </body>
 </html>
