Added kelowna weather

--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-  <h1>Hello world!</h1>
-  <h2>Welcome to my widget page</h2>
-  <br>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="style.css" rel=stylesheet />
+</head>
+
+<body>
+  <div class="container" class="vert">
+    <h1>Hello world!</h1>
+    <h2>Welcome to my widget page</h2>
+  </div>
+
+  <p>
+    -----------------------
+  </p>
   <!-- Greg -->
-  <div>
+  <div class="container">
     <a href="george.html">Greg</a>
   </div>
-  </body>
+
+  <p>
+    -----------------------
+  </p>
+
+  <br>
+
+  <div class="container" class="vert">
+    <a href="weather_widget.html">Weather Widget</a>
+    <a href="qotd.html">QOTD</a>
+    <a href="today.html">Today</a>
+  </div>
+</body>
+
 </html>
