--- a/weather_kelowna.html
+++ b/weather_kelowna.html
@@ -14,8 +14,7 @@
 
 <body>
 
-  <a class="weatherwidget-io" href="https://forecast7.com/en/37d34n121d89/san-jose/" data-label_1="SAN JOSE" data-label_2="WEATHER" data-font="Arial" data-icons="Climacons Animated" data-days="5" data-theme="original" data-basecolor="#303437"
-    data-highcolor="#ff5454">SAN JOSE WEATHER</a>
+  <a class="weatherwidget-io" href="https://forecast7.com/en/49d89n119d50/kelowna/" data-label_1="KELOWNA" data-label_2="WEATHER" data-font="Arial" data-icons="Climacons Animated" data-days="3" data-theme="weather_one">KELOWNA WEATHER</a>
   <script>
     ! function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
