Added computer quote

--- a/qotd.html
+++ b/qotd.html
@@ -28,6 +28,7 @@
     r_text[12] = "Wgt ORD"
     r_text[13] = "Confirm plus chop"
     r_text[14] = "When the going gets tough, the tough gets going."
+    r_text[15] = "If you lie to a computer, it will get you."
 
     var i = Math.floor(r_text.length * Math.random());
 
