--- a/qotd.html
+++ b/qotd.html
@@ -16,19 +16,20 @@
     r_text[0] = "At the end of the day, the day will end.";
     r_text[1] = "Tough times don't last, tough men do.";
     r_text[2] = "9th core value!";
-    r_text[3] = "Half full water bottle drink up"
+    r_text[3] = "Half full water bottle drink up";
     r_text[4] = "Ey recruit, how do you spell RECORD?";
-    r_text[5] = "REC is you. ORD is me."
-    r_text[6] = "Better wake up your idea!"
-    r_text[7] = "My problem?"
-    r_text[8] = "NEVERMIND!"
-    r_text[9] = "Safety third"
-    r_text[10] = "You think, I thought, who confirm?"
-    r_text[11] = "Don't make your problem my problem."
-    r_text[12] = "Wgt ORD"
-    r_text[13] = "Confirm plus chop"
-    r_text[14] = "When the going gets tough, the tough gets going."
-    r_text[15] = "If you lie to a computer, it will get you."
+    r_text[5] = "REC is you. ORD is me.";
+    r_text[6] = "Better wake up your idea!";
+    r_text[7] = "My problem?";
+    r_text[8] = "NEVERMIND!";
+    r_text[9] = "Safety third";
+    r_text[10] = "You think, I thought, who confirm?";
+    r_text[11] = "Don't make your problem my problem.";
+    r_text[12] = "Wgt ORD";
+    r_text[13] = "Confirm plus chop";
+    r_text[14] = "When the going gets tough, the tough gets going.";
+    r_text[15] = "If you lie to a computer, it will get you.";
+    r_text[16] = "FALL IN. FALL IN. FALL IN. FALL IN. FALL IN."
 
     var i = Math.floor(r_text.length * Math.random());
 
