Fixed array push

--- a/qotd.html
+++ b/qotd.html
@@ -13,23 +13,23 @@
   </div>
   <script LANGUAGE="JAVASCRIPT">
     var r_text = new Array();
-    r_text.push() = "At the end of the day, the day will end.";
-    r_text.push() = "Tough times don't last, tough men do.";
-    r_text.push() = "9th core value!";
-    r_text.push() = "Half full water bottle drink up";
-    r_text.push() = "Ey recruit, how do you spell RECORD?";
-    r_text.push() = "REC is you. ORD is me.";
-    r_text.push() = "Better wake up your idea!";
-    r_text.push() = "My problem?";
-    r_text.push() = "NEVERMIND!";
-    r_text.push() = "Safety third";
-    r_text.push() = "You think, I thought, who confirm?";
-    r_text.push() = "Don't make your problem my problem.";
-    r_text.push() = "Wgt ORD";
-    r_text.push() = "Confirm plus chop";
-    r_text.push() = "When the going gets tough, the tough gets going.";
-    r_text.push() = "If you lie to a computer, it will get you.";
-    r_text.push() = "FALL IN. FALL IN. FALL IN. FALL IN. FALL IN."
+    r_text.push("At the end of the day, the day will end.");
+    r_text.push("Tough times don't last, tough men do.");
+    r_text.push("9th core value!");
+    r_text.push("Half full water bottle drink up");
+    r_text.push("Ey recruit, how do you spell RECORD?");
+    r_text.push("REC is you. ORD is me.");
+    r_text.push("Better wake up your idea!");
+    r_text.push("My problem?");
+    r_text.push("NEVERMIND!");
+    r_text.push("Safety third");
+    r_text.push("You think, I thought, who confirm?");
+    r_text.push("Don't make your problem my problem.");
+    r_text.push("Wgt ORD");
+    r_text.push("Confirm plus chop");
+    r_text.push("When the going gets tough, the tough gets going.");
+    r_text.push("If you lie to a computer, it will get you.");
+    r_text.push("FALL IN. FALL IN. FALL IN. FALL IN. FALL IN.");
 
     var i = Math.floor(r_text.length * Math.random());
 
