added more QOTDs which are now just quotes in general lol

--- a/qotd.html
+++ b/qotd.html
@@ -30,6 +30,27 @@
     r_text.push("When the going gets tough, the tough gets going.");
     r_text.push("If you lie to a computer, it will get you.");
     r_text.push("FALL IN. FALL IN. FALL IN. FALL IN. FALL IN.");
+    r_text.push("See no evil, hear no evil. - 3rd Sergeant Darren");
+    r_text.push("Purple light, in the valley, this is where, I wanna be.");
+    r_text.push("We are Singapore, Singaporean.");
+    r_text.push("I! [NRIC] [RANK] AND [NAME], HEREBY DECLARE THAT!");
+    r_text.push("I DIE, YOU DIE, EVERYBODY DIE!");
+    r_text.push("Dame da ne, dame yo, dame da no yo...");
+    r_text.push("1000 to go, ALT SEL.");
+    r_text.push("50.. 40.. 30.. 20.. 10 5.");
+    r_text.push("Nothing is gonna save us forever, but many things can save us today.");
+    r_text.push("Now asbestos free!");
+    r_text.push("BUY BATTLE DUTY MODERN WAREFARE PREMIUM ELITE 3 TODAY!");
+    r_text.push("I CHARGE YOU!");
+    r_text.push("Drink beyond the point of thirst.");
+    r_text.push("90, 45!!");
+    r_text.push("...for peace and a sustainable future.");
+    r_text.push("LIFE IS A HIGHWAY, I WANNA RIDE IT ALL NIGHT LONG.");
+    r_text.push("Planes before Trains.");
+    r_text.push("Trains before Plains");
+    r_text.push("WE ARE THE WARRIORS OF THE SAF!");
+    r_text.push("Son, don't ask. Neither half full or empty is your glass.");
+    r_text.push("YOU'VE HEARD ABOUT NOTION SO LET ME MOTION INTO OUR SPONSOR FOR TODAY, THE RAPPA CORPORATION.");
 
     var i = Math.floor(r_text.length * Math.random());
 
