Added QOTDs from best of I don't even

--- a/qotd.html
+++ b/qotd.html
@@ -39,8 +39,9 @@
     r_text.push("1000 to go, ALT SEL.");
     r_text.push("50.. 40.. 30.. 20.. 10 5.");
     r_text.push("Nothing is gonna save us forever, but many things can save us today.");
+    r_text.push("We didn't start the fire");
     r_text.push("Now asbestos free!");
-    r_text.push("BUY BATTLE DUTY MODERN WAREFARE PREMIUM ELITE 3 TODAY!");
+    r_text.push("BUY BATTLE DUTY MODERN QUARTERS 3 PREMIUM ELITE TODAY!");
     r_text.push("I CHARGE YOU!");
     r_text.push("Drink beyond the point of thirst.");
     r_text.push("90, 45!!");
@@ -48,9 +49,17 @@
     r_text.push("LIFE IS A HIGHWAY, I WANNA RIDE IT ALL NIGHT LONG.");
     r_text.push("Planes before Trains.");
     r_text.push("Trains before Plains");
+    r_text.push("No plane, no gain");
     r_text.push("WE ARE THE WARRIORS OF THE SAF!");
     r_text.push("Son, don't ask. Neither half full or empty is your glass.");
     r_text.push("YOU'VE HEARD ABOUT NOTION SO LET ME MOTION INTO OUR SPONSOR FOR TODAY, THE RAPPA CORPORATION.");
+    r_text.push("YOU CAN'T HANDLE THE TRUTH!");
+    r_text.push("Or an AT Mine");
+    r_text.push("Run, Be free young man! BE FREE! *splat*");
+    r_text.push("DO YOU HATE MONEY?");
+    r_text.push("BEEP BEP");
+    r_text.push("NOT A SINGLE FOK WAS GIVEN");
+    r_text.push("Okay here's the plan. The overlord will serve as a retard magnet...");
 
     var i = Math.floor(r_text.length * Math.random());
 
