--- a/qotd.html
+++ b/qotd.html
@@ -60,6 +60,7 @@
     r_text.push("BEEP BEP");
     r_text.push("NOT A SINGLE FOK WAS GIVEN");
     r_text.push("Okay here's the plan. The overlord will serve as a retard magnet...");
+    r_text.push("AND WE HAD TO SHARE THE ROCK");
 
     var i = Math.floor(r_text.length * Math.random());
 
