--- a/qotd.html
+++ b/qotd.html
@@ -61,6 +61,8 @@
     r_text.push("NOT A SINGLE FOK WAS GIVEN");
     r_text.push("Okay here's the plan. The overlord will serve as a retard magnet...");
     r_text.push("AND WE HAD TO SHARE THE ROCK");
+    r_text.push("Papers, Please.");
+    r_text.push("Glory to Arstotzka!");
 
     var i = Math.floor(r_text.length * Math.random());
 
