Fixed gulfstream not in div

--- a/sim.html
+++ b/sim.html
@@ -328,8 +328,10 @@
       </div>
     </div>
   </section>
-  <img src="images/im-143102.jpeg" alt="">
-  <p class="caption">Gulfstream began using SAF in 2016 for their daily operations, including in flight tests of their new aircraft.</p>
+  <div data-aos="fade-up" class="break stack">
+    <img src="images/im-143102.jpeg" alt="">
+    <p class="caption">Gulfstream began using SAF in 2016 for their daily operations, including in flight tests of their new aircraft.</p>
+  </div>
   <section id="today">
     <div data-aos="fade-up" class="flexbox">
       <div data-aos="fade-up" class="header">
