Changed fades to by section

--- a/sim.html
+++ b/sim.html
@@ -22,7 +22,7 @@
 
 
         // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
-        offset: 150, // offset (in px) from the original trigger point
+        offset: 200, // offset (in px) from the original trigger point
         delay: 100, // values from 0 to 3000, with step 50ms
         duration: 2000, // values from 0 to 3000, with step 50ms
         easing: 'ease', // default easing for AOS animations
@@ -36,20 +36,20 @@
         <div class="bg_fade">
           <div class="flexbox">
             <div class="center" style="max-width: 100%;">
-              <h1 data-aos="fade-up" style="margin-top: 40px;">Sustainable Aviation Fuel (SAF)</h1>
-              <h2 data-aos="fade-up" style="font-weight: normal;">Tyler Choo</h2>
+              <h1 style="margin-top: 40px;">Sustainable Aviation Fuel (SAF)</h1>
+              <h2 style="font-weight: normal;">Tyler Choo</h2>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section id="themission">
+    <section data-aos="fade-up" id="themission">
       <div class="section">
         <div class="flexbox">
-          <div data-aos="fade-up" data-aos="fade-in" class="image half">
+          <div class="image half">
             <img src="images/icao-logo.png" alt="">
           </div>
-          <div data-aos="fade-up" class="textbox half">
+          <div class="textbox half">
             <h1>The ICAO 2050 Mission</h1>
             <p>The second conference on aviation and alternative fuels (CAAF/2) endorsed the 2050 ICAO Vision for Sustainable Aviation Fuels as a living inspirational path and called on States, industry and other stakeholders, for a significant proportion of conventional aviation fuels (CAF) to be substituted with sustainable aviation fuels (SAF) by 2050, for international civil aviation to reduce carbon emissions significantly, and whilst pursuing all opportunities in the basket of mitigation measures to reduce emissions as necessary.</p>
           </div>
@@ -59,16 +59,16 @@
     <div data-aos="fade-up" class="section break" id="break">
       <img src="images/hon-ab-sustainable-aviation-fuel.jpeg" alt="">
     </div>
-    <section id="theproblem">
+    <section data-aos="fade-up" id="theproblem">
       <div class="flexbox">
           <div class="header">
-            <h1 data-aos="fade-up">The Problem</h1>
-            <div data-aos="fade-up" class="underline"></div>
+            <h1>The Problem</h1>
+            <div class="underline"></div>
           </div>
         </div>
       </div>
       <div class="section" id="theunitedstates">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="textbox half">
             <h1>The United States</h1>
             <p>The US contributes to more than 70% of the world pollution due to aviation.</p>
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="section" id="polluters">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="image half">
             <img src="images/graphics/piechart.png" alt="" style="width: 70%;">
           </div>
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="section" id="pollution">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="half">
             <img src="images/graphics/toxicgases.png" alt="">
           </div>
@@ -109,26 +109,26 @@
       <img src="images/United_Biofuel_Flight1180-520_0.jpeg" alt="">
       <p class="caption">United Airlines is committed to using SAF.</p>
     </div>
-    <section id="thesolution">
+    <section data-aos="fade-up" id="thesolution">
       <div class="flexbox" id="thesolution">
-        <div data-aos="fade-up" class="header">
+        <div class="header">
           <h1>The Solution</h1>
           <div class="underline"></div>
         </div>
       </div>
       <div class="section">
         <div class="centerbox">
-          <div data-aos="fade-up" class="center">
+          <div class="center">
             <h1>Sustainable Aviation Fuel (SAF)</h1>
             <p>SAF is aviation fuel synthesized from renewable resources. The main source of SAF is currently biofuel, otherwise known as <strong>aviation biofuel</strong>. The sources of SAF are varied, and many are still being tested. </p>
           </div>
         </div>
       </div>
-      <div data-aos="fade-up" class="centerbox">
+      <div class="centerbox">
         <h1>Sources of Aviation Biofuel</h1>
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="image">
             <img src="images/graphics/sources.png" alt="" style="max-width: 60%;">
           </div>
@@ -139,30 +139,30 @@
       <div data-aos-duration="2000" data-aos-delay="200" class="section">
         <div class="flexbox">
           <div class="half">
-            <div data-aos="fade-up" class="textbox">
+            <div class="textbox">
               <p>There are 3 main emerging sources for SAF, and 1 already commercialized option: <strong>HEFA-SPK</strong></p>
             </div>
-            <div data-aos="fade-up" class="image">
+            <div class="image">
               <img src="images/graphics/hefasynthesis.png" alt="">
             </div>
           </div>
           <div class="half">
-            <div data-aos="fade-up" class="image">
+            <div class="image">
               <img src="images/graphics/emergingfuels.png" alt="">
             </div>
-            <div data-aos="fade-up" class="textbox">
+            <div class="textbox">
               <p style="margin: 30px 0px;">
                 Of the 10 proposed sources for aviation biofuel, 2 are in prototype, 7 are being demonstrated, and 1 is already in use commercially.
               </p>
             </div>
-            <div data-aos="fade-up" class="image">
+            <div class="image">
               <img src="images/graphics/10sources.png" alt="">
             </div>
           </div>
         </div>
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="image half">
             <img src="images/graphics/tonnesgallons.png" alt="">
           </div>
@@ -177,15 +177,15 @@
       <img src="images/RollsRoyce_SAF1.jpeg" alt="">
       <p class="caption">Rolls Royce began testing 100% aviation biofuel on their engine test platforms in early 2021.</p>
     </div>
-    <section id="thebenefits">
-      <div data-aos="fade-up" class="flexbox">
+    <section data-aos="fade-up" id="thebenefits">
+      <div class="flexbox">
         <div class="header">
           <h1>The Benefits</h1>
           <div class="underline"></div>
         </div>
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="half">
             <div class="textbox">
               <h1>Cleaner Skies</h1>
@@ -205,14 +205,14 @@
         </div>
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="image">
             <img src="images/graphics/5050results.png" alt="">
           </div>
         </div>
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="image half">
             <img src="images/graphics/otherbenefits.png" alt="">
           </div>
@@ -224,7 +224,7 @@
         </div>
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="textbox half">
             <h1>Going Carbon Neutral</h1>
             <p>The plants grown to produce biofuels will also absorb oxygen. The ICAO hopes that at large enough production scales, the absorption of CO<sub>2</sub> will be enough to offset the emissions by aircraft. The IATA predicts an <strong>80% reduction</strong> in lifecycle carbon emissions.</p>
@@ -239,18 +239,18 @@
       <img src="images/virginatlantic.jpg" alt="">
       <p class="caption">In 2008, Virgin Atlantic flew the first commercial flight powered by a biofuel blend.</p>
     </div>
-    <section id="thejourney">
-      <div data-aos="fade-up" class="flexbox">
+    <section data-aos="fade-up" id="thejourney">
+      <div class="flexbox">
         <div class="header">
           <h1>The Journey</h1>
           <div class="underline"></div>
         </div>
       </div>
-      <div data-aos="fade-up" class="section">
+      <div class="section">
         <img src="images/graphics/timeline.png" alt="" style="padding: 20px 0px;">
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="textbox half">
             <h1>Governments need to help</h1>
             <p>The Biden administration has committed <strong>4.3 billion US dollars</strong> to SAF R&D in order to achieve at least a <strong>30% improvement</strong> in fuel efficiency.</p>
@@ -261,7 +261,7 @@
         </div>
       </div>
       <div class="section">
-        <div data-aos="fade-up" class="flexbox">
+        <div class="flexbox">
           <div class="image half">
             <img src="images/graphics/marketgrowth.png" alt="">
           </div>
@@ -277,15 +277,15 @@
       <p class="caption">Boeing's fleet of ecoDemonstrator aircraft have been using various types SAF as part of their testing for a more sustainable future.</p>
     </div>
   </body>
-  <section>
-    <div data-aos="fade-up" class="flexbox">
+  <section data-aos="fade-up">
+    <div class="flexbox">
       <div class="header">
         <h1>The Challenges</h1>
         <div class="underline"></div>
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="flexbox">
+      <div class="flexbox">
         <div class="textbox half">
           <h1>High Demand</h1>
           <p>In order to produce enough biofuel to meet global demands for aviation fuel, we will not be able to rely on just one production method. Multiple processes of aviation biofuel development will need to be developed.</p>
@@ -296,7 +296,7 @@
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="flexbox">
+      <div class="flexbox">
         <div class="image half">
           <img src="images/graphics/dropin.png" alt="">
         </div>
@@ -307,7 +307,7 @@
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="flexbox">
+      <div class="flexbox">
         <div class="image half">
           <img src="images/graphics/regulatory&safety.png" alt="">
         </div>
@@ -317,7 +317,7 @@
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="flexbox">
+      <div class="flexbox">
         <div class="textbox half">
           <h1>Really Eco-friendly?</h1>
           <p>Testing has shown burning SAF has little reduction in CO<sub>2</sub> emissions. This means that carbon neutrality must be obtained by offsetting the production. This is done mainly through CO<sub>2</sub> absorption by the plants grown to produce the biofuels.</p>
@@ -332,15 +332,15 @@
     <img src="images/im-143102.jpeg" alt="">
     <p class="caption">Gulfstream began using SAF in 2016 for their daily operations, including in flight tests of their new aircraft.</p>
   </div>
-  <section id="today">
-    <div data-aos="fade-up" class="flexbox">
+  <section data-aos="fade-up" id="today">
+    <div class="flexbox">
       <div class="header">
         <h1>Who are Helping?</h1>
         <div class="underline"></div>
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="flexbox">
+      <div class="flexbox">
         <div class="half">
           <img src="images/graphics/pioneers.png" alt="">
         </div>
@@ -350,7 +350,7 @@
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="flexbox">
+      <div class="flexbox">
         <div class="half">
           <p class="caption">Airlines considered <strong>pioneers</strong> of SAF</p>
         </div>
@@ -360,14 +360,14 @@
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="centerbox">
+      <div class="centerbox">
         <div class="center">
           <p>Almost all of the large aircraft producers in the world have committed to using SAF and developing aircraft capable of being fueled with 100% biofuel blends in the future.</p>
         </div>
       </div>
     </div>
     <div class="section">
-      <div data-aos="fade-up" class="flexbox">
+      <div class="flexbox">
         <div class="center">
           <img src="images/graphics/brands.png" alt="">
         </div>
@@ -382,9 +382,9 @@
   </div>
   <div class="header">
   </div>
-  <section>
+  <section data-aos="fade-up">
     <div class="section">
-      <div data-aos="fade-in" class="flexbox">
+      <div class="flexbox">
         <div class="citation">
           <div class="stack">
             <h1 style="font-size: 32pt;">Sources</h1>
