--- a/george.html
+++ b/george.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="style.css">
 
   <body>
+  <div>
     <h1>
       Welcome to Greg's Widgets
     </h1>
+  </div>
+
+  
   </body>
 </html>
