--- a/george.html
+++ b/george.html
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="gregostyle.css">
 
   <body>
   <div>
-    <h1>
+    <h1 style="color:lightgreen">
       Welcome to Greg's Widgets
     </h1>
+    <br>
+    <p>
+      Please enjoy your stay!
+    </p>
   </div>
 
-  
+
   </body>
 </html>
